--- a/war/WEB-INF/i18n/messages.properties
+++ b/war/WEB-INF/i18n/messages.properties
@@ -1,5 +1,5 @@
 #Arquivo com mensagens e labels do projeto em portugues do Brasil.
-app.title=Projeto exemplo: Spring MVC e App Engine
+app.title=Projeto: Spring MVC <small>(c/ Tiles, Bootstrap e JQuery)</small> no App Engine
 label.mercadoria.nome=Nome
 label.mercadoria.descricao=Descrição
 label.mercadoria.quantidade=Quantidade
@@ -31,7 +31,7 @@ page.title.lista.mercadoria=Lista de mercadorias
 page.title.incluir.mercadoria=Incluir mercadoria
 page.title.editar.mercadoria=Editar mercadoria
 page.title.sobre=Sobre o projeto
-page.title.app=App Demo JSF2 no App Engine
+page.title.app=App Demo Spring MVC c/ Tiles, JQuery e Bootstrap no App Engine
 
 msg.erro.salvar.mercadoria=Não foi possível salvar a mercadoria.
 msg.erro.listar.mercadoria=Não foi possível carregar a lista de mercadorias.
@@ -41,7 +41,7 @@ msg.erro.processamento=Erro durante o processamento
 msg.erro.descricao=Infelizmente algum problema ocorreu durante o processamento.
 msg.erro.detalhes=Detalhes da exceção
 
-sobre.build=<strong>Implementation-Build:</strong> 350683fd9ad242462ebffb9cb5f565481a4f4991
-sobre.title=<strong>Implementation-Title:</strong> Demo JSF 2 c/ Objectify no App Engine
+sobre.build=<strong>Implementation-Build:</strong> a52e7203059d6190efe02a55749891537ec1ee71
+sobre.title=<strong>Implementation-Title:</strong> Demo Spring MVC c/ Tiles, Bootstrap, JQuery e Objectify no App Engine
 sobre.site=<strong>Implementation-Site:</strong> http://www.yaw.com.br
 sobre.built=<strong>Built-by:</strong> YaW Tecnologia
