--- a/war/WEB-INF/i18n/messages.properties
+++ b/war/WEB-INF/i18n/messages.properties
@@ -1,47 +1,67 @@
 #Arquivo com mensagens e labels do projeto em portugues do Brasil.
-app.title=Projeto: Spring MVC <small>(c/ Tiles, Bootstrap e JQuery)</small> no App Engine
-label.mercadoria.nome=Nome
-label.mercadoria.descricao=Descrição
-label.mercadoria.quantidade=Quantidade
-label.mercadoria.preco=Preço
-label.mercadorias=Mercadorias
-label.mercadoria=Mercadoria
+app.title=Bitmaker tecnologia.
 label.sobre=Sobre
 label.sobre.projeto=Projeto
 
-label.listagem=Listagem
-label.incluir=Incluir
+label.listagem=Listar
+label.incluir=Adicionar
 label.editar=Editar
 
-label.yaw=YaW Tecnologia
-label.logo.yaw=Logo da YaW
-label.detalhes.projeto=<strong>Projeto livre</strong>, demonstração das tecnologias <em>Spring MVC</em> e <em>Objectify</em> na plataforma de <strong>cloud computing</strong> do Google, o <em>App Engine</em>.
-label.saiba.mais=saiba mais
+label.yaw=Bitmaker
+label.logo.yaw=Bitmaker
+label.detalhes.projeto=Bitmaker tecnologia.
 
 button.atualizar=Atualizar
 button.salvar=Salvar
 button.cancelar=Cancelar
-button.excluir=Excluir
+button.excluir=Remover
 
-menu.lista=<i class="icon-list"></i> Lista
-menu.incluir=<i class="icon-pencil"></i> Incluir
-menu.sobre=<i class="icon-book"></i> Sobre
+menu.lista=<i class="icon-list"></i> List
+menu.incluir=<i class="icon-pencil"></i> Add
+menu.sobre=<i class="icon-book"></i> About
 
-page.title.lista.mercadoria=Lista de mercadorias
-page.title.incluir.mercadoria=Incluir mercadoria
-page.title.editar.mercadoria=Editar mercadoria
-page.title.sobre=Sobre o projeto
-page.title.app=App Demo Spring MVC c/ Tiles, JQuery e Bootstrap no App Engine
+page.title.sobre=Sobre este programa
+page.title.app=Bitmaker tecnologia
 
-msg.erro.salvar.mercadoria=Não foi possível salvar a mercadoria.
-msg.erro.listar.mercadoria=Não foi possível carregar a lista de mercadorias.
-msg.erro.remover.mercadoria=Não foi possível remover a mercadoria.
-msg.erro.mercadoria.inexistente=Mercadoria inexistente, não é possível editar.
-msg.erro.processamento=Erro durante o processamento
-msg.erro.descricao=Infelizmente algum problema ocorreu durante o processamento.
-msg.erro.detalhes=Detalhes da exceção
+msg.erro.salvar.mercadoria=Nao foi possivel salvar.
+msg.erro.listar.mercadoria=Nao foi possivel salvar.
+msg.erro.remover.mercadoria=Nao foi possivel deletar
+msg.erro.mercadoria.inexistente=Nada aqui
+msg.erro.processamento=Erro ao processar.
+msg.erro.descricao=Erro ao processar esta solicitacao.
+msg.erro.detalhes=Detalhes.
 
 sobre.build=<strong>Implementation-Build:</strong> a52e7203059d6190efe02a55749891537ec1ee71
-sobre.title=<strong>Implementation-Title:</strong> Demo Spring MVC c/ Tiles, Bootstrap, JQuery e Objectify no App Engine
-sobre.site=<strong>Implementation-Site:</strong> http://www.yaw.com.br
-sobre.built=<strong>Built-by:</strong> YaW Tecnologia
+sobre.title=<strong>Implementation-Title:</strong> Ajudando no dia a dia
+sobre.site=<strong>Implementation-Site:</strong> http://www.bitmaker.com.br
+sobre.built=<strong>Built-by:</strong> Bitmaker
+
+label.termos.servico=Termos de Servico.
+label.imagem=imagem
+label.userimagem=Imagem de profile
+label.saiba.mais=saiba mais.
+ 
+label.cadastro.servico=Servico
+label.cadastro.imagem=Imagem
+label.cadastro.URL=Url
+label.cadastro.senha=Senha
+label.cadastro.usuario=Usuario
+label.cadastro.importancia=Importancia
+label.cadastros=cadastros
+label.cadastro=cadastro
+
+label.cliente.nome=Nome
+label.cliente.rut=Rut
+label.cliente.contato=Contato
+label.clientes=Clientes
+label.cliente=Cliente
+
+page.title.lista.cadastro=Lista de cadastros
+page.title.incluir.cadastro=Incluir cadastro
+page.title.editar.cadastro=Editar cadastro
+
+msg.erro.salvar.cadastro=Não foi possível salvar a cadastro.
+msg.erro.listar.cadastro=Não foi possível carregar a lista de cadastros.
+msg.erro.remover.cadastro=Não foi possível remover a cadastro.
+
+msg.erro.inexistente=Registro inexistente, não é possível editar.
