--- a/war/WEB-INF/i18n/messages.properties
+++ b/war/WEB-INF/i18n/messages.properties
@@ -7,8 +7,8 @@ label.listagem=Listar
 label.incluir=Adicionar
 label.editar=Editar
 
-label.yaw=Bitmaker
-label.logo.yaw=Bitmaker
+label.bitmaker=Bitmaker
+label.logo.bitmaker=Bitmaker
 label.detalhes.projeto=Bitmaker tecnologia.
 
 button.atualizar=Atualizar
@@ -55,6 +55,10 @@ label.cliente.rut=Rut
 label.cliente.contato=Contato
 label.clientes=Clientes
 label.cliente=Cliente
+
+label.importancia.nome=Nome
+label.importancias=Importancias
+label.importancia=Importancia
 
 page.title.lista.cadastro=Lista de cadastros
 page.title.incluir.cadastro=Incluir cadastro
